--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
